# bysnaps_snapshots

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  conftest.py  docker-compose.yml  local.yaml  local.yml  main.py  pyproject.toml  snap_shot.db
.github/workflows/: tests.yml  workflow.yml
app/: __main__.py  main.py
app/config/: log_config.py  settings.py
app/controllers/api/: snap_controllers.py
app/database/config/: setup.py
app/database/managers/: snap_manager.py
app/database/migrations/: env.py
app/database/models/: models.py
app/database/utils/: model_converter.py  prebuilt_queries.py
app/middlewares/: cors_middleware.py
app/models/: snaps.py
app/modules/cloud_snaps/: cloudinary_snaps.py
app/modules/decoders/: cv2_snap_decoder.py
app/modules/generators/: qr_snap_generator.py
app/routers/api/: snap_router.py
app/services/: dependencies.py  snaps_service.py
app/services/interfaces/: interface.py
app/tests/: conftest.py  test_delete_snap.py  test_update_snap.py
app/utils/: parsers.py
config/: settings.py
config/requirements/: requirements.txt
controllers/api/: snap_controllers.py
database/config/: setup.py
database/managers/: snap_manager.py
database/managers/interfaces/: snap_manager_interface.py
database/migrations/: env.py
database/migrations/versions/: 2022-11-06-14-04_6b6b810bdcc4.py
database/models/: models.py
database/utils/: dependencies.py  model_converter.py  prebuilt_queries.py  sql.py
docker/: Dockerfile  docker-compose.yml
middlewares/: cors_middleware.py
models/: products.py  snap_item.py  snaps.py
modules/cloud_snaps/: cloudinary.py  cloudinary_snaps.py
modules/cloud_snaps/interfaces/: cloud_snap_interface.py
modules/decoders/: cv2_snap_decoder.py
modules/decoders/interfaces/: snap_decoder_interface.py
modules/generators/: qr_snap_generator.py
modules/generators/interfaces/: snap_generator_interface.py
routers/api/: snap_router.py  snaps.py
services/: dependencies.py  snaps.py  snaps_service.py
services/interfaces/: interface.py
snapshots/: __main__.py  main.py
snapshots/api/controllers/: snap_controllers.py
snapshots/config/: log_config.py  settings.py
snapshots/config/docker/: Dockerfile
snapshots/config/requirements/: requirements.txt
snapshots/controllers/api/: snap_controllers.py
snapshots/database/config/: setup.py
snapshots/database/migrations/: env.py
snapshots/dependencies/: service_dependency.py
snapshots/middlewares/: cors_middleware.py
snapshots/models/: snaps.py
snapshots/services/: dependencies.py  snaps_service.py
snapshots/tests/: conftest.py  test_create_snap.py  test_delete_snap.py  test_get_snap.py  test_get_snaps.py  test_health.py  test_update_snap.py
snapshots/utils/: id_generator.py
tests/: test_create_snap.py  test_get_snap.py  test_get_snaps.py  test_health.py
utils/: id_generator.py  parsers.py
(+33 files in other folders)
