[tool.poetry]
name = "bysnaps-snapshots"
version = "0.1.0"
description = "The snap management service for BySnaps Inc."
authors = ["Tega Ukavwe <justtega97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cloudinary = "1.30.0"
fastapi = "0.85.1"
opencv-python = "4.6.0.66"
pillow = "9.2.0"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
qrcode = "7.3.1"
uvicorn = "0.19.0"
sqlalchemy = "1.4.42"
yarl = "1.8.1"
pre-commit = "2.20.0"
mypy = "0.982"
isort = "5.10.1"
flake8 = "5.0.4"
black = "22.10.0"
alembic = "^1.8.1"
requests = "^2.28.1"
asyncpg = "^0.27.0"
pytest = "^7.2.0"
autoflake = "^1.7.7"
redis = "^4.3.4"
fastapi-pagination = "^0.10.0"
aiosqlite = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
empty_parameter_set_mark = "xfail"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
python_files = "test_*.py *_test.py"

testpaths = [
    "tests",
    "integration",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["snapshots"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
